# TransmutPyspark

./: .dockerignore  .gitignore  ARQUITETURA.md  GUIA_ARQUITETURA.md  LICENSE  README.md  config.txt  dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
etl_project_example/: transmut.toml
etl_project_example/data/: data.csv
etl_project_example/etl_code/: ast_example.txt  atr.py  etl.py  experiment_one.py  experiment_two.py  mtr.py  nftp.py  uts.py
etl_project_example/etl_test/: conftest.py  test_atr.py  test_mtr.py  test_nftp.py  test_uts.py
etl_project_example/etl_test/strong_test/: test_strong_experiment_one.py  test_strong_experiment_two.py
etl_project_example/etl_test/weak_test/: test_weak_experiment_one.py  test_weak_experiment_two.py
example/src_code/: program_example.ipynb
example/test/: test_atr.ipynb  test_mtr.ipynb  test_nftp.ipynb
src/: config_loader.py  mutant.py  mutation_manager.py  operator.py  operator_mtr.py  operator_nftp.py  reporter.py  test_runner.py
src/cli/: cli.py
src/config/: ast_analyzer.py  config_loader.py  resolver.py
src/config_loader/test/: test_config_loader.py
src/model/: config_loader.py  mutant.py  mutant_id_manager.py  test_result.py
src/mutation_manager/code/: mutation_manager.py
src/mutation_manager/test/: test_mutation_manager.py
src/operator/test/: test_operator.py
src/operators/: __init__.py  operator.py  operator_atr.py  operator_mtr.py  operator_nftp.py  operator_uts.py
src/reporter/: reporter.py
src/test_module/: __init__.py  test_runner.py
tests/: test_operator_nftp.py  tests_ast_analyzer.py  tests_cli.py  tests_config_loader.py  tests_mutant.py  tests_mutant_id_manager.py  tests_mutation_manager.py  tests_operator.py  tests_operator_atr.py  tests_operator_mtr.py  tests_operator_nftp.py  tests_operator_uts.py  tests_reporter.py  tests_resolver.py  tests_test_result.py  tests_test_runner.py
transmut-pyspark/: README.md  pyproject.toml  setup.sh
txts/: CAPITULO_FERRAMENTA.txt  CAPITULO_FERRAMENTA_ACADEMICO.txt  SUBSEÇÕES_ATR_UTS.txt
