[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "transmutpyspark"
version     = "0.1.0"
description = "Mutation testing for PySpark DataFrame pipelines"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }
keywords    = ["mutation testing", "pyspark", "testing", "quality", "dataframe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyspark>=3.3",
    "pytest>=7.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
transmut = "src.cli.cli:main"

[project.urls]
Homepage   = "https://github.com/seu-user/TransmutPySpark"
Repository = "https://github.com/seu-user/TransmutPySpark"

[tool.hatch.build.targets.wheel]
packages = ["src"]