[project]
name = "transmut-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Barros Costa",email = "eduardobarroscosta@id.uff.br"},
    {name = "Bruno",email = "exemplo@id.uff.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "transmut_pyspark", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
