[tool.poetry]
name = "transmut-pyspark"
version = "0.1.0"
description = "Ferramenta de teste de mutação em pipelines ETL com PySpark"
authors = [
    "Eduardo Barros Costa <eduardobarroscosta@id.uff.br>",
    "Bruno <exemplo@id.uff.br>"
]
readme = "README.md"
packages = [{include = "transmut_pyspark", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
pyspark = ">=4.1.1,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"